--- a/cadastro.html
+++ b/cadastro.html
@@ -43,8 +43,15 @@
 
 	</script>
   </head>
-  <body class="d-flex justify-content-center signin-body">
-    <form class="form-signin border p-5" >
+  <body class="justify-content-center signin-body">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+  		<a class="nav-link font-weight-bold" href="index.html">RePlaneja</a>
+  		<div class="collapse navbar-collapse">
+  			<a class="nav-link ml-auto" href="signin.html">Login<span class="sr-only">(current)</span></a>
+  			<a class="nav-link" href="cadastro.html">Cadastre-se<span class="sr-only">(current)</span></a>
+  		</div>
+  	</nav>
+    <form class="form-signin border p-5 ml-auto mr-auto" >
         <h1 class="h3 mb-3 font-weight-normal">Cadastre-se</h1>
         <label class="sr-only">Nome: </label>
         <input type="text" id="inputName" name="nome" class="form-control mb-1" placeholder="Nome" required  autofocus>
