--- a/cadastro.html
+++ b/cadastro.html
@@ -9,6 +9,14 @@
 	<script>
 
 		$(function(){
+
+      if(localStorage.getItem("login")[0] == 1){
+
+        $(".login-link").html("Log Out");
+        $(".cadastro-link").remove();
+
+      }
+
 			$("form").submit(function(event){
 
         var infoArray = $(this).serializeArray();
@@ -47,8 +55,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
   		<a class="nav-link font-weight-bold" href="index.html">RePlaneja</a>
   		<div class="collapse navbar-collapse">
-  			<a class="nav-link ml-auto" href="signin.html">Login<span class="sr-only">(current)</span></a>
-  			<a class="nav-link" href="cadastro.html">Cadastre-se<span class="sr-only">(current)</span></a>
+  			<a class="nav-link ml-auto login-link" href="signin.html">Login</a>
+  			<a class="nav-link cadastro-link" href="cadastro.html">Cadastre-se</a>
   		</div>
   	</nav>
     <form class="form-signin border p-5 ml-auto mr-auto" >
