--- a/signin.html
+++ b/signin.html
@@ -9,9 +9,29 @@
   <script src="cadastros.js"></script>
 	<script>
 
+  function logOut(){
+
+    localStorage.setItem("login", [0, null]);
+    window.location.href = "signin.html";
+
+  }
+
   $(function(){
 
     console.log(localStorage.getItem("login")[0]);
+
+    if(localStorage.getItem("login")[0] == 1){
+
+      $(".form-signin").css("visibility", "hidden");
+      $(".login-link").html("Log Out");
+      $(".cadastro-link").remove();
+
+    }else{
+
+      localStorage.setItem("login", [0, null]);
+      $(".logout-btn").css("visibility", "hidden");
+
+    }
 
     $("form").submit(function(event){
 
@@ -32,12 +52,6 @@
         }
 
       });
-
-      if( localStorage.getItem("login")[0] == 0){
-
-        localStorage.setItem("login", [0, null]);
-
-      }
 
       var cadastros = JSON.parse(localStorage.getItem("cadastros"));
       cadastros = cadastros["cadastros"];
@@ -70,10 +84,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
   		<a class="nav-link font-weight-bold" href="index.html">RePlaneja</a>
   		<div class="collapse navbar-collapse">
-  			<a class="nav-link ml-auto" href="signin.html">Login<span class="sr-only">(current)</span></a>
-  			<a class="nav-link" href="cadastro.html">Cadastre-se<span class="sr-only">(current)</span></a>
+  			<a class="nav-link ml-auto login-link" href="signin.html">Login</a>
+  			<a class="nav-link cadastro-link" href="cadastro.html">Cadastre-se<span class="sr-only">(current)</span></a>
   		</div>
   	</nav>
+    <input type="button" class=" mt-5 btn btn-danger logout-btn" value="Log Out" OnClick="logOut()"></input>
     <form class="form-signin border p-5 ml-auto mr-auto">
         <h1 class="h3 mb-3 font-weight-normal">Faça Login</h1>
         <label for="inputEmail" class="sr-only" >Email address</label>
