--- a/adicionar-plano.html
+++ b/adicionar-plano.html
@@ -11,7 +11,7 @@
   if( localStorage.getItem("login")[0] == 0){
 
     alert("É preciso estar logado para enviar um plano");
-    window.location.href = "index.html";
+    window.location.href = "signin.html";
 
   }
 
@@ -43,6 +43,8 @@
           }
 
         });
+
+        console.log(obj);
 
 				$(".novo-plano").html("<div class=\"alert alert-secondary\" role=\"alert\">Plano Enviado</div>");
         localStorage.setItem("novoPlano", JSON.stringify(obj));
