--- a/cadastro.html
+++ b/cadastro.html
@@ -40,6 +40,7 @@
 				$(".novo-plano").html("<div class=\"alert alert-secondary\" role=\"alert\">Plano Enviado</div>");
 
         var cadastros = JSON.parse(localStorage.getItem("cadastros"));
+        console.log(cadastros);
         cadastros["cadastros"].push(obj);
 
         localStorage.setItem("cadastros", cadastros);
