--- a/index.html
+++ b/index.html
@@ -4,7 +4,50 @@
 		<meta charset="UTF-8">
 		<script src="jquery.js"></script>
 		<script src="bootstrap4/js/bootstrap.js"></script>
-		<script src="posts.js"></script>
+		<script>
+			var allBeforeName = "<div class=\"border mt-4 postagem\"> <div class=\"row mt-2\"> <div class=\"ml-5\" class=\"col-sm-5\"> <label>Autor:</label><a class=\"ml-1\" href=\"\">";
+			var allBeforePostNumber = "</a> </div> <div class=\"col-sm-5 d-flex justify-content-center\"> <h4><a href=\"post.html?post=post";
+			var allBeforePostTitle = "\">";
+			var allBeforeSpanId = "</a></h4> </div> <div class=\"col-sm-5 d-flex justify-content-end\"> <span id=\"cont_post_";
+			var allBeforeUpId = "\" class=\"d-flex align-items-center\">0</span> <button class=\"btn btn-success ml-sm-1\" onClick=\"upVote('cont_post_";
+			var allBeforeDownId = "');\">&#11014;</button> <button class=\"btn btn-danger ml-sm-1\" onClick=\"downVote('cont_post_";
+			var allBeforeReport = "');\">&#11015;</button> <button class=\"btn btn-warning ml-sm-1\" onClick=\"denunciar('cont_post_";
+			var allBeforeDelete = "');\">Denunciar &#9888;</button>	<button class=\"btn btn-danger btn-excluir ml-sm-1\" onClick=\"excluir('cont_post_";
+			var allBeforeDescription = "');\">Excluir &#128465;</button>		</div>	</div>	<div class=\"row ml-2 mr-2 mt-2\">		<div>			<p>Descrição: ";
+			var stringEnd = "</p> </div> </div> </div>";
+
+			/* Modelo de Postagem:
+
+			<div class="border mt-4 postagem">
+				<div class="row mt-2">
+					<div class="ml-5" class="col-sm-5">
+						<label>Autor:</label><a class="ml-1" href="">*NomePessoa*</a>
+					</div>
+					<div class="col-sm-5 d-flex justify-content-center">
+						<h4><a href="post.html?post=post*NumPost*">*TituloPost*</a></h4>
+					</div>
+					<div class="col-sm-5 d-flex justify-content-end">
+						<span id="cont_post_*numPost*" class="d-flex align-items-center">0</span>
+						<button class="btn btn-success ml-sm-1" onClick="upVote('cont_post_*NumPost*');">&#11014;</button>
+						<button class="btn btn-danger ml-sm-1" onClick="downVote('cont_post_*NumPost*');">&#11015;</button>
+						<button class="btn btn-warning ml-sm-1" onClick="denunciar('cont_post_*NumPost*');">Denunciar &#9888;</button>
+						<button class="btn btn-danger ml-sm-1 btn-exluir" onClick="excluir('cont_post_*NumPost*');">Excluir &#128465;</button>
+					</div>
+				</div>
+				<div class="row ml-2 mr-2 mt-2">
+					<div>
+						<p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas commodo tincidunt ex. Proin sollicitudin velit quis
+							dictum efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam vestibulum neque et nulla scelerisque, et condimentum
+							mauris iaculis. Sed velit urna, aliquet id laoreet volutpat, interdum ut enim. Donec ornare eget justo at sodales. In tempus eleifend nulla non efficitur. Duis
+							consequat tortor lacus, eu hendrerit orci egestas nec. Aliquam vel quam dapibus, eleifend leo ut, fringilla tellus. Praesent mollis ipsum convallis, posuere nisl et,
+							suscipit orci. Mauris id nulla id magna lobortis ornare. Nunc aliquam mollis risus, tempus efficitur eros consequat id.
+						</p>
+					</div>
+				</div>
+			</div>
+
+			*/
+		</script>
 		<link rel="stylesheet" href="bootstrap4/css/bootstrap.css">
 		<link rel="stylesheet" href="style.css">
 		</link>
@@ -156,7 +199,7 @@
 
 				});
 
-				var pĺano;
+				/*var pĺano;
 
 				if(localStorage.getItem("novoPlano") != null){
 
@@ -164,7 +207,7 @@
 					plano = JSON.parse(conteudo);
 					posts.push(plano);
 
-				}
+				}*/
 
 				posts = $(Object.assign({}, posts));
 				posts = posts[0];
