--- a/post.html
+++ b/post.html
@@ -64,13 +64,13 @@
            </div>
        </div>
        <div class="tags">
-            <div class="tag materia"></div>
-            <div class="tag serie"></div>
+            <div class="tag">Matéria: <span class="materia"></span></div>
+            <div class="tag">Série: <span class="serie"></span>°</div>
         </div>
-       <div class="row ml-2 mr-2 mt-2 description">
+       <div class="ml-4 mt-4">
            <span>Descrição: </span>
            <p class="descricao"></p>
-
+           <br>
            <span>Conteúdo: </span>
            <p class="conteudo"></p>
 
