--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			var allBeforeName = "<div class=\"border mt-4 postagem\"> <div class=\"row mt-2 justify-content-center\"> <div class=\"ml-5 col-sm-3\" class=\"col-sm-3\"> <label>Autor:</label><a class=\"ml-1\" href=\"\">";
 			var allBeforePostNumber = "</a> </div> <div class=\"col-sm-3 d-flex\"> <h4><a href=\"post.html?post=post";
 			var allBeforePostTitle = "\">";
-			var allBeforeSpanId = "</a></h4> </div> <div class=\"col-sm-3 d-flex justify-content-end ml-auto mr-2\"> <span id=\"cont_post_";
+			var allBeforeSpanId = "</a></h4> </div> <div class=\"col-sm-4 d-flex justify-content-end ml-auto mr-2\"> <span id=\"cont_post_";
 			var allBeforeUpId = "\" class=\"d-flex align-items-center\">0</span> <button class=\"btn btn-success ml-sm-1\" onClick=\"upVote('cont_post_";
 			var allBeforeDownId = "');\">&#11014;</button> <button class=\"btn btn-danger ml-sm-1\" onClick=\"downVote('cont_post_";
 			var allBeforeReport = "');\">&#11015;</button> <button class=\"btn btn-warning ml-sm-1\" onClick=\"denunciar('cont_post_";
@@ -99,6 +99,14 @@
 
 					var element = $(document.getElementById(id_post));
 					element.parents(".postagem").remove();
+
+					var postsList = JSON.parse(localStorage.getItem("posts"));
+					var lastChar = id_post.charAt((id_post.length)-1);
+					postsList["posts"].splice(lastChar);
+
+					localStorage.setItem("posts", JSON.stringify(postsList));
+
+					console.log(postsList);
 
 				}
 
