Adicionado cadastro de admin

--- a/cadastroAdmin.html
+++ b/cadastroAdmin.html
@@ -66,7 +66,7 @@
   		</div>
   	</nav>
     <form class="form-signin border p-5 ml-auto mr-auto" >
-        <h1 class="h3 mb-3 font-weight-normal">Cadastre-se</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Cadastrar Admin</h1>
         <label class="sr-only">Nome: </label>
         <input type="text" id="inputName" name="nome" class="form-control mb-1" placeholder="Nome" required  autofocus>
         <label class="sr-only">Email address</label>
@@ -75,27 +75,6 @@
         <input type="password" id="inputPassword" name="senha" class="form-control mb-1" placeholder="Senha" required>
         <label class="sr-only">Confirm Password</label>
         <input type="password" id="inputPasswordConfirm" name="confirmacao" class="form-control mb-1" placeholder="Corfime a senha" required>
-        <label class="mt-1">Sou professor de: </label>
-        <select class="mb-1" name="area">
-          <option value="lpt">Língua Portuguesa</option>
-          <option value="les">Língua Estrangeira</option>
-          <option value="mat">Matemática</option>
-          <option value="qim">Química</option>
-          <option value="fis">Física</option>
-          <option value="bio">Biologia</option>
-          <option value="his">História</option>
-          <option value="geo">Geografia</option>
-          <option value="art">Artes</option>
-          <option value="ger">Geral (Fundamental I)</option>
-        </select>
-        <label class="mt-1">Formação: </label>
-        <select name="formacao">
-          <option value="nor">Ensino Médio Normal</option>
-          <option value="nrd">Graduando</option>
-          <option value="grd">Graduado</option>
-          <option value="pgd">Pós-Graduado</option>
-          <option value="dct">Doutor</option>
-        </select>
         <button id="sendForm" class="btn btn-lg btn-primary btn-block mt-3" type="submit">Cadastrar</button>
     </form>
 </body>
