--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 
 				$(".btn-excluir").show();
 				$(".btn-envio").hide();
+				$(".cadastro-link").show();
+				$(".cadastro-link").html("Cadastrar Admin");
+				$(".cadastro-link").attr("href", "cadastroAdmin.html");
 				return("Vendo página como Admin");
 
 			}
@@ -199,7 +202,7 @@
 				if(localStorage.getItem("login")[0] == 1){
 
 					$(".login-link").html("Log Out");
-							$(".cadastro-link").remove();
+					$(".cadastro-link").hide();
 
 				}
 
