--- a/cadastro.html
+++ b/cadastro.html
@@ -59,6 +59,11 @@
           alert("Já existe um usuário com este e-mail");
           window.location.href = "cadastro.html";
 
+        } else if(obj["email"].substring(0, 5) == "admin"){
+
+          alert("Não é possível cadastrar este formato de e-mail");
+          window.location.href = "cadastro.html";
+
         } else {
 
           cadastros["cadastros"].push(obj);
