--- a/cadastroAdmin.html
+++ b/cadastroAdmin.html
@@ -59,6 +59,11 @@
           alert("Já existe um usuário com este e-mail");
           window.location.href = "cadastro.html";
 
+        } else if(obj["senha"] != obj["confirmacao"]){
+
+          alert("As senhas digitadas não conferem");
+          window.location.href = "cadastro.html"
+  
         } else {
 
           cadastros["cadastros"].push(obj);
