Consertada a tag da matéria

--- a/adicionar-plano.html
+++ b/adicionar-plano.html
@@ -117,16 +117,16 @@
          <div class="col-md-5 mb-3">
            <label>Matéria</label>
            <select name="materia" class="custom-select d-block w-100" required>
-			   <option value="lpt">Língua Portuguesa</option>
-			   <option value="les">Língua Estrangeira</option>
-			   <option value="mat">Matemática</option>
-   			   <option value="qim">Química</option>
-			   <option value="fis">Física</option>
-			   <option value="bio">Biologia</option>
-			   <option value="his">História</option>
-			   <option value="geo">Geografia</option>
-			   <option value="art">Artes</option>
-			   <option value="ger">Geral (Fundamental I)</option>
+			   <option value="Língua Portuguesa">Língua Portuguesa</option>
+			   <option value="Língua Estrangeira">Língua Estrangeira</option>
+			   <option value="Matemática">Matemática</option>
+   			   <option value="Química">Química</option>
+			   <option value="Física">Física</option>
+			   <option value="Biologia">Biologia</option>
+			   <option value="História">História</option>
+			   <option value="Geografia">Geografia</option>
+			   <option value="Artes">Artes</option>
+			   <option value="Geral">Geral (Fundamental I)</option>
            </select>
          </div>
          <div class="col-md-4 mb-3">
