--- a/post.html
+++ b/post.html
@@ -64,7 +64,7 @@
            </div>
        </div>
        <div class="tags">
-            <div class="tag">Matéria: <span class="materia"></span></div>
+            <div class="tag"><span class="materia"></span></div>
             <div class="tag">Série: <span class="serie"></span>°</div>
         </div>
        <div class="ml-4 mt-4">
